-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2
-
None
-
-
91fe6fb2e (dev), ebb80cbb0 (6.6), df45d9ba8 (tqtc/lts-6.5)
Found in sentry crash logger service at the Qt Design Studio project and its very frequent:
https://the-qt-company-00.sentry.io/issues/4574213784
qschannelbackend +0x0233c1: QTlsPrivate::X509CertificateSchannel::QSslCertificate_from_CERT_CONTEXT (qx509_schannel.cpp:46) qschannelbackend +0x021209: QTlsPrivate::TlsCryptographSchannel::verifyCertContext (qtls_schannel.cpp:2133) qschannelbackend +0x022959: QTlsPrivate::TlsCryptographSchannel::verifyHandshake (qtls_schannel.cpp:1347) qschannelbackend +0x01b25b: QTlsPrivate::TlsCryptographSchannel::continueHandshake (qtls_schannel.cpp:1855) qschannelbackend +0x02097c: QTlsPrivate::TlsCryptographSchannel::transmit (qtls_schannel.cpp:1669) qschannelbackend +0x0204d4: QTlsPrivate::TlsCryptographSchannel::transmit (qtls_schannel.cpp:1489) Qt6Core +0x0b3cd1: doActivate<T> (qobject.cpp:4004) Qt6Core +0x0b6133: QMetaObject::activate (qobject.cpp:4052) Qt6Network +0x04acda: QAbstractSocketPrivate::canReadNotification (qabstractsocket.cpp:646) Qt6Network +0x0508d6: QReadNotifier::event (qnativesocketengine.cpp:1238) Qt6Widgets +0x010a9d: QApplicationPrivate::notify_helper (qapplication.cpp:3287) Qt6Widgets +0x00fb70: QApplication::notify (qapplication.cpp:3241) Qt6Core +0x079eb4: QCoreApplication::notifyInternal2 (qcoreapplication.cpp:1118) Qt6Core +0x1da176: qt_internal_proc (qeventdispatcher_win.cpp:151) USER32 +0x018240: UserCallWinProcCheckWow USER32 +0x017d00: DispatchMessageWorker Qt6Core +0x1d9b9e: QEventDispatcherWin32::processEvents (qeventdispatcher_win.cpp:531) Qt6Core +0x07f803: QEventLoop::exec (qeventloop.cpp:182) Qt6Core +0x15d9dc: QThread::exec (qthread.cpp:578) Qt6Core +0x1dfbf0: QThreadPrivate::start (qthread_win.cpp:290) KERNEL32 +0x01257c: BaseThreadInitThunk ntdll +0x05aa77: RtlUserThreadStart
